--- a/src/app.html
+++ b/src/app.html
@@ -1,24 +1,23 @@
 <template>
-  <require from='bootstrap/css/bootstrap.css'> </require>
-  <require from='./styles.css'> </require>
-  <require from='./contact-list'></require>
+  <require from="bootstrap/css/bootstrap.css"></require>
+  <require from="./styles.css"></require>
+  <require from="./contact-list"></require>
 
-
-  <nav class='navbar navbar-default navbar-fixed-top' role='navigation'>
-    <div class='navbar-header'>
-      <a href="#" target="_blank">
-        <i class='fa fa-user'></i>
-        <span>Contacts </span>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">
+        <i class="fa fa-user"></i>
+        <span>Contacts</span>
       </a>
     </div>
   </nav>
 
-  <div class='container'>
+  <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
+
+  <div class="container">
     <div class="row">
-      <div class="col-md-8">
-        <contact-list class="col-md-4"></contact-list>
-        <router-view class='col-md-8'></router-view>
-      </div>
+      <contact-list class="col-md-4"></contact-list>
+      <router-view class="col-md-8"></router-view>
     </div>
   </div>
 </template>
