Add view for button

--- a/src/contact-list.html
+++ b/src/contact-list.html
@@ -8,7 +8,7 @@
         </a>
       </li>
     </ul>
-    <button class="btn btn-default" type="submit">Add</button>
+    <button class="btn btn-default" click.delegate="newContactView()" type="submit">Add</button>
   </div>
 </template>
 
