--- a/src/add-contact.html
+++ b/src/add-contact.html
@@ -4,40 +4,40 @@
       <h3 class="panel-title">Profile</h3>
     </div>
     <div class="panel-body">
-      <form class="form-horizontal" role="form">
 
+      <form class="form-horizontal" role="form">
         <div class="form-group">
           <label class="col-sm-2 control-label">First Name</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="first name" class="form-control">
+            <input type="text" placeholder="first name" class="form-control" value.bind="contact.firstName">
           </div>
         </div>
 
         <div class="form-group">
           <label class="col-sm-2 control-label">Last Name</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="last name" class="form-control">
+            <input type="text" placeholder="last name" class="form-control" value.bind="contact.lastName">
           </div>
         </div>
 
         <div class="form-group">
           <label class="col-sm-2 control-label">Email</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="email" class="form-control">
+            <input type="text" placeholder="email" class="form-control" value.bind="contact.email">
           </div>
         </div>
 
         <div class="form-group">
           <label class="col-sm-2 control-label">Phone Number</label>
           <div class="col-sm-10">
-            <input type="text" placeholder="phone number" class="form-control">
+            <input type="text" placeholder="phone number" class="form-control" value.bind="contact.phoneNumber">
           </div>
         </div>
-
       </form>
+
     </div>
   </div>
   <div class="button-bar">
-    <button class="btn btn-success">Save</button>
+    <button click.delegate="save()" class="btn btn-success">Save</button>
   </div>
 </template>
